<resources>
  <string name="app_name">Link-Mind</string>
  <string name="text_home">HOME</string>
  <string name="text_clip">CLIP</string>
  <string name="text_timer">TIMER</string>
  <string name="text_my">MY</string>
  <string name="text_placeholder">placeholder</string>

  <string name="text_all">전체</string>

  <!-- mypage -->
  <string name="mypage_link_number_now">지금 까지 읽은 링크수</string>
  <string name="mypage_number">개</string>
  <string name="mypage_this_week_read_link">이번주 열람한 링크</string>
  <string name="mypage_this_week_save_link">이번주 저장한 링크</string>
  <string name="mypage_please_wait">아직 마이페이지는 추가 공사 중!\n 업데이트를 기다려주세요 :)</string>

  <!-- timer -->
  <string name="timer_title">TIMER</string>
  <string name="timer_permission_off">알림 설정이 꺼져 있어요</string>
  <string name="timer_to_use_timer">타이머 기능을 이용하시려면</string>
  <string name="timer_setting_notification">기기 설정 > 알림</string>
  <string name="timer_turn_on_permission">에서 알림을 켜주세요.</string>
  <string name="timer_set_timer">타이머를 설정하고\n원하는 때에 링크를 받아보세요</string>
  <string name="timer_set_btn">타이머 설정하기</string>
  <string name="timer_read">읽으러가기</string>
  <string name="timer_link">링크들을</string>
  <string name="timer_good">읽기 딱 좋은 시간이에요!</string>
  <string name="timer_wait">타이머 대기 중..</string>
  <string name="timer_not_complete">타이머가 완료되면 리마인드 드릴게요</string>
  <string name="timer_complete">완료된 타이머</string>

  <!-- edit clip -->
  <string name="edit_clip_guide_msg">클립을 누른 뒤 위아래로 드래그하여 순서를 수정하세요!</string>
  <string name="edit_clip_minus_description">클립을 삭제하려면 누르세요</string>
  <string name="edit_clip_edit_description">클립을 수정하려면 누르세요</string>


  <!-- modify timer -->
  <string name="modify_timer_mod">타이머 수정하기</string>
  <string name="modify_timer_delete">삭제</string>
  <string name="modify_timer_title">수정하기</string>
  
  <!-- clip -->
  <string name="clip_search">검색어를 입력하세요</string>
  <string name="clip_add_clip">+ 클립추가</string>
  <string name="clip_all">전체 클립</string>
  <string name="clip_empty">클립을 추가해\n링크를 정리해보세요!</string> 
  <string name="clip_toolbar_edit">편집</string>
  <string name="clip_toolbar_all_clip">전체 클립</string>
  
  <!-- clip detail-->
  <string name="clip_detail_read">열람</string>
  <string name="clip_detail_unread">미열람</string>
  <string name="clip_detail_empty">아직 클립에 저장된 링크가 없어요\n아래 + 버튼을 통해 링크를 저장해보세요!</string>

</resources>
