<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="org.sopt.mypage.my.MyFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_mypage_title"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_my_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="18dp"
    android:text="@string/text_my"
    android:textAppearance="@style/Typography.suit.bold_18"
    android:textColor="@color/neutrals900"
    app:layout_constraintBottom_toBottomOf="@+id/cl_mypage_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


  <ImageView
    android:id="@+id/iv_setting"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:src="@drawable/ic_setting_24"
    app:layout_constraintBottom_toBottomOf="@+id/cl_mypage_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_mypage_now_link"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cl_mypage_title">

    <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/iv_profile"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginTop="1dp"
      android:background="@drawable/img_settings_profile"
      android:scaleType="centerCrop"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:shapeAppearance="@style/circleImageView" />

    <TextView
      android:id="@+id/tv_now_link"
      android:layout_width="155dp"
      android:layout_height="22dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="26dp"
      android:text="@string/mypage_link_number_now"
      android:textAppearance="@style/Typography.suit.regular_18"
      android:textColor="@color/neutrals900"
      app:layout_constraintStart_toEndOf="@id/iv_profile"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/mypage_number"
      android:textAppearance="@style/Typography.suit.regular_18"
      android:textColor="@color/neutrals900"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>


  <View
    android:id="@+id/bg_link_record"
    android:layout_width="0dp"
    android:layout_height="83dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="24dp"
    android:background="@drawable/shape_neutrals050_line_12_rect"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cl_mypage_now_link" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginTop="14dp"
    android:text="@string/mypage_this_week_read_link"
    android:textAppearance="@style/Typography.suit.regular_14"
    android:textColor="@color/neutrals400"
    app:layout_constraintStart_toStartOf="@+id/bg_link_record"
    app:layout_constraintTop_toTopOf="@+id/bg_link_record" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginTop="14dp"
    android:text="@string/mypage_this_week_save_link"
    android:textAppearance="@style/Typography.suit.regular_14"
    android:textColor="@color/neutrals400"
    app:layout_constraintStart_toEndOf="@+id/v_mypage_line"
    app:layout_constraintTop_toTopOf="@+id/bg_link_record" />

  <View
    android:id="@+id/v_mypage_line"
    android:layout_width="1dp"
    android:layout_height="83dp"
    android:background="@drawable/shape_neutrals100_line_line"
    app:layout_constraintBottom_toBottomOf="@+id/bg_link_record"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/bg_link_record" />

  <View
    android:id="@+id/v_mypage_1"
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:layout_marginTop="24dp"
    android:background="@color/neutrals050"
    app:layout_constraintTop_toBottomOf="@id/bg_link_record" />

  <ImageView
    android:id="@+id/iv_please_wait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/img_settings_alarm"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/v_mypage_1" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mypage_please_wait"
    android:textAppearance="@style/Typography.suit.regular_16_128"
    android:textColor="@color/neutrals500"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_please_wait" />

</androidx.constraintlayout.widget.ConstraintLayout>




